Add tests for frosting generator Update README Add icons and demos

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "email": "alistair@agchapman.com",
     "url": "https://agchapman.com"
   },
+  "preferGlobal": true,
+  "readme": "README.md",
   "files": [
     "generators"
   ],
