--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,11 @@ node_js:
   - v4
   - '0.12'
   - '0.10'
+matrix:
+  include:
+  - os: linux
+    dist: trusty # Ubuntu 14.04
+    dotnet: 1.0.0-preview2-003121
+    mono: none
+    env: DOTNETCORE=1
+    sudo: required
