--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
-language: c#
+sudo: required
+language: node
 node_js:
   - v6
   - v5
   - v4
   - '0.12'
   - '0.10'
+before_install:
+  - sudo add-apt-repository https://apt-mo.trafficmanager.net/repos/dotnet-release/ -y
+  - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
+  - sudo apt-get -qq update
+  - sudo apt-get install dotnet-dev-1.0.0-preview2-003131 -y
