--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
   - '0.12'
   - '0.10'
 before_install:
-  - sudo add-apt-repository https://apt-mo.trafficmanager.net/repos/dotnet-release/ -y
+  - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
   - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
   - sudo apt-get -qq update
   - sudo apt-get install dotnet-dev-1.0.0-preview2-003131 -y
