--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.0.0",
     "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0"
+    "gulp-nsp": "^2.1.0",
+    "gulp-coveralls": "^0.1.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
