Major refactoring and update to generator; Update Cake resources from http to https; Updates to use ES6 syntax; Change Frosting to csproj; Fix wonky config code;

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "generator-cake",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Yeoman generator for Cake build scripts",
   "homepage": "https://github.com/agc93/generator-cake/",
   "author": {
     "name": "Alistair Chapman",
-    "email": "alistair@agchapman.com",
-    "url": "https://agchapman.com"
+    "email": "alistair@cakebuild.net",
+    "url": "https://cakebuild.net"
   },
   "preferGlobal": true,
   "files": [
@@ -20,30 +20,31 @@
     "csharp"
   ],
   "dependencies": {
-    "chalk": "^1.0.0",
-    "yeoman-generator": "^0.23.0",
+    "chalk": "^2.1.0",
+    "yeoman-generator": "^1.1.1",
     "yeoman-remote": "^1.0.1",
-    "yosay": "^1.0.0"
+    "yosay": "^2.0.1"
   },
   "devDependencies": {
-    "yeoman-test": "^1.0.0",
-    "yeoman-assert": "^2.0.0",
-    "eslint": "^3.1.1",
-    "eslint-config-xo-space": "^0.14.0",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-exclude-gitignore": "^1.0.0",
+    "eslint": "^4.4.1",
+    "eslint-config-xo-space": "^0.16.0",
+    "gulp": "^3.9.1",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-eslint": "^4.0.0",
+    "gulp-exclude-gitignore": "^1.1.1",
+    "gulp-istanbul": "^1.1.2",
     "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.4"
+    "gulp-mocha": "^3.0.1",
+    "gulp-nsp": "^2.4.2",
+    "gulp-plumber": "^1.1.0",
+    "yeoman-assert": "^3.0.0",
+    "yeoman-test": "^1.7.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
     "env": {
-      "mocha": true
+      "mocha": true,
+      "node": true
     },
     "rules": {
       "linebreak-style": "off",
@@ -53,7 +54,7 @@
   },
   "repository": "agc93/generator-cake",
   "scripts": {
-    "prepublish": "gulp prepublish",
+    "prepare": "gulp prepublish",
     "test": "gulp"
   },
   "license": "MIT",
