--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ sudo: required
 dist: trusty
 language: node_js
 node_js:
-  - v6
-  - v5
+  - 7
+  - 6
 before_install:
   - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
   - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
   - sudo apt-get -qq update
-  - sudo apt-get install dotnet-dev-1.0.0-preview2-003131 -y
+  - sudo apt-get install dotnet-dev-1.0.4 -y
