--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "generator-cake",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Yeoman generator for Cake build scripts",
-  "homepage": "https://github.com/agc93/generator-cake/",
+  "homepage": "https://github.com/cake-build/cake-yeoman/",
   "author": {
     "name": "Alistair Chapman",
     "email": "alistair@cakebuild.net",
@@ -53,7 +53,7 @@
       "indent": "warn"
     }
   },
-  "repository": "agc93/generator-cake",
+  "repository": "cake-build/cake-yeoman",
   "scripts": {
     "prepare": "gulp prepublish",
     "test": "gulp"
