--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ sudo: required
 dist: trusty
 language: node_js
 node_js:
-  - 7
-  - 6
+  - 10
+  - 8
 before_install:
-  - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
-  - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
+  - wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb
+  - sudo dpkg -i packages-microsoft-prod.deb
+  - sudo apt-get -qq install apt-transport-https
   - sudo apt-get -qq update
-  - sudo apt-get install dotnet-dev-1.0.4 -y
+  - sudo apt-get -qq install dotnet-sdk-2.1
