--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
 sudo: required
-dist: trusty
-language: node_js
-node_js:
-  - 10
-  - 8
+#language: node_js
 before_install:
-  - wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb
-  - sudo dpkg -i packages-microsoft-prod.deb
-  - sudo apt-get -qq install apt-transport-https
-  - sudo apt-get -qq update
-  - sudo apt-get -qq install dotnet-sdk-2.1
+  - docker build -t cake-yeoman -f .travis.Dockerfile .
+
+script:
+  - docker run -it --rm -w /app/ cake-yeoman
